--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,18 @@
-.container-form {
-	height: 100vh;
-}
-.zone-form {
-	width: 40%;
-}
-.zone-form button {
-	width: auto;
-}
 
-.sign {
-	color: blue;
-	margin-left: 5px;
+.container-img{
+	position:relative;
+  	display:inline-block;
+}
+.container-img img{
+	min-height: 100vh;
+}
+.container-img::before{
+	background: linear-gradient(180deg, #47BC82 22.91%, #131514 100%);
+	mix-blend-mode: multiply;
+	width: 100%;
+	position: absolute;
+	content: "";
+	height: 100%;
 }
 .buttons-login{
 	display: flex;
@@ -18,4 +20,10 @@
 }
 .buttons-login button{
  margin: 24px;
+}
+.sign-in{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
 }
