--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-
+.login-image-header{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
 .container-img{
 	position:relative;
   	display:inline-block;
@@ -14,16 +18,18 @@
 	content: "";
 	height: 100%;
 }
-.buttons-login{
-	display: flex;
-	justify-content: center;
-}
-.buttons-login button{
- margin: 24px;
-}
 .sign-in{
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
+	height: 90%;
+}
+.container-information{
+	width: 100%;
+}
+.monolithTo{
+	width: 100%;
+	position: absolute;
+	bottom: 0;
 }
