--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -33,6 +33,30 @@
 	position: absolute;
 	bottom: 0;
 }
+@media only screen and (max-width:890px){
+	.container-img{
+		display: none;
+	}
+	.sign-in{
+		height: 100vh;
+	}
+	.container-policies{
+		position: absolute;
+		bottom: 0;
+		align-items: center;
+		width: 100%;
+	}
+}
+@media only screen and (max-width:950px){
+	.container-img img{
+		width: 500px !important;
+	}
+}
+@media only screen and (max-width:1100px){
+	.container-img img{
+		width: 550px;
+	}
+}
 @media only screen and (max-width:600px){
 	.container-img{
 		display: none;
