--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -2,6 +2,9 @@
     position: absolute;
     right: 0;
 }
+.drop-classes{
+    z-index: 1;
+}
 .container-classes{
 	overflow-x: hidden;
 	max-height: 265px;
@@ -30,6 +33,11 @@
     font-size: 12px;
     line-height: 18px;
 }
+#cy {
+    width: 100%;
+    height: 700px;
+    display: block;
+  }
 @media only screen and (max-width:600px){
     .container-home{
         margin-left: 0 !important;
