--- a/src/css/AddApplication.css
+++ b/src/css/AddApplication.css
@@ -20,7 +20,7 @@ text-decoration: none;
 flex-direction: column;
 display: flex;
 align-items: center;
-justify-content: center;
+height: 100vh;
 overflow-x: hidden;
 overflow-y: auto;
 background-color: #131514;
