--- a/src/css/AddApplication.css
+++ b/src/css/AddApplication.css
@@ -5,6 +5,7 @@
 
 .link {
 text-decoration: none;
+color: #47BC82;
 }
 
 .download {
@@ -38,6 +39,8 @@ background-color: #131514;
 	
 	
 }
+
+
 
 
 	
