--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -38,6 +38,7 @@
     width: 100%;
     height: 700px;
     display: block;
+    background-color: #1E1E1E;
   }
 input[type="range"]::-webkit-slider-thumb {
     background: url('../../public/iconDegree.png') #47BC82;
@@ -89,6 +90,17 @@ input[type="range"]::-webkit-slider-thumb {
 }
 .active{
     display: block;
+}
+.degree{
+    background-color: #1E1E1E;
+    margin-top: -30px;
+}
+.container-metrics{
+    width: 324px;
+    height: 250;
+    background: #212322;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.14), 0px 3px 14px rgba(0, 0, 0, 0.12), 0px 5px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
 }
 @media only screen and (max-width:600px){
     .container-home{
