--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,13 @@
 .box > *, ::after, ::before  {
 	box-sizing: border-box !important;
 }
+body{
+	overflow-x: hidden;
+  overflow-y: auto;
+}
+@font-face {
+	font-family: 'Play';
+	src: url('./fonts/Play-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
