--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -38,7 +38,7 @@
     width: 100%;
     height: 700px;
     display: block;
-    background-color: #1E1E1E;
+    background-color: #131514;
   }
 input[type="range"]::-webkit-slider-thumb {
     background: url('../../public/iconDegree.png') #47BC82;
@@ -52,6 +52,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 .input-degree{
     z-index: 1;
+    position: relative;
 }
 .input-degree span{
     position: absolute;
@@ -92,15 +93,15 @@ input[type="range"]::-webkit-slider-thumb {
     display: block;
 }
 .degree{
-    background-color: #1E1E1E;
+    background-color: #131514;
     margin-top: -30px;
 }
 .metric{
-    background: #1E1E1E;
+    background: #131514;
 }
 .container-metrics{
     width: 324px;
-    background: #212322;
+    background: #131514;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.14), 0px 3px 14px rgba(0, 0, 0, 0.12), 0px 5px 5px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
 }
