--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@ body{
 	overflow-x: hidden;
   overflow-y: auto;
 }
+.App{
+    height: 100vh;
+	background: #131514;
+}
 @font-face {
 	font-family: 'Play';
 	src: url('./fonts/Play-Regular.ttf') format('truetype');
