--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -105,6 +105,23 @@ input[type="range"]::-webkit-slider-thumb {
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.14), 0px 3px 14px rgba(0, 0, 0, 0.12), 0px 5px 5px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
 }
+.message-deleted-app{
+    position: absolute;
+    right: 0;
+    animation-name: slideUp;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+@keyframes slideUp {
+    from {
+      bottom: -5;
+      opacity: 0;
+    }
+    to {
+      bottom: 20;
+      opacity: 1;
+    }
+  }
 @media only screen and (max-width:600px){
     .container-home{
         margin-left: 0 !important;
