--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -116,7 +116,7 @@ input[type="range"]::-webkit-slider-thumb {
 .spinner{
     height: 700px;
 }
-.spinner img{
+.spinner svg{
     width: 120px;
     height: 110px;
 }
