--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -160,6 +160,9 @@ input[type="range"]::-webkit-slider-thumb {
 .myclass{
     word-break: break-all;
 }
+.metric-mobile{
+    display: none !important;
+}
 @keyframes slideUp {
     from {
       bottom: 0;
@@ -170,23 +173,48 @@ input[type="range"]::-webkit-slider-thumb {
       opacity: 1;
     }
   }
+@media only screen and (max-width:800px){
+    .date-app{
+        display: none;
+    }
+
+}
 @media only screen and (max-width:600px){
     .container-home{
         margin-left: 0 !important;
     }
     #cy {
         width: 100%;
-        height: 650px;
+        height: 500px;
         display: block;
-      }
+    }
+    .switch-more{
+        display: none !important;
+    }
+    .button-dropdown-classes{
+        width: 130px !important;
+        margin-left: 13px;
+    }
+    .selected-in-dropdown{
+        margin-right: 0px !important;
+    }
+    .interface-switch{
+        margin-left: 5px !important;
+    }
+    .datastore-switch{
+        margin-left: 0px !important;
+    }
+    .switch-text{
+        font-size: 12px !important;
+    }
     .range-labels {
         margin-left: -15px;
     }
-    .container-switch{
-        display: none;
-    }
     .metric{
         display: none !important;
+    }
+    .metric-mobile{
+        display: flex !important;
     }
     .container-classes{
         overflow: auto;
