--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -208,7 +208,11 @@ input[type="range"]::-webkit-slider-thumb {
         font-size: 12px !important;
     }
     .range-labels {
-        margin-left: -15px;
+        margin-top: 2px;
+        margin-left: -12px;
+    }
+    .range-labels *{
+        margin: 25px;
     }
     .metric{
         display: none !important;
@@ -219,5 +223,8 @@ input[type="range"]::-webkit-slider-thumb {
     .container-classes{
         overflow: auto;
         max-width: 365px;
+    }
+    .line-degree{
+        width: 250px !important;
     }
 }
