update tooltip's of metrics

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -160,6 +160,9 @@ input[type="range"]::-webkit-slider-thumb {
 .myclass{
     word-break: break-all;
 }
+.metrics-items:hover{
+    color:#47BC82;
+}
 .metric-mobile{
     display: none !important;
 }
