--- a/src/css/Settings.css
+++ b/src/css/Settings.css
@@ -1,3 +1,7 @@
+.settings{
+    background-color: #131514;
+    height: 100vh;
+}
 .container-settings{
     background-color: #131514;
     width: 100%;
