--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -5,6 +5,10 @@
 
 
 /*Estilos del dropdown de clases*/
+.container-home{
+    z-index: 2;
+    position: sticky;
+}
 .drop-classes{
     z-index: 1;
     width: auto !important;
@@ -191,10 +195,6 @@ input[type="range"]::-webkit-slider-thumb {
     max-height: 241px;
     border-radius: 8px;
 }
-.fathers-tables-metric{
-    width: auto;
-    max-width: 180px !important;
-}
 
 /*Estilos de spinner*/
 
@@ -242,7 +242,7 @@ input[type="range"]::-webkit-slider-thumb {
     background: #212322;
     box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.14), 0px 3px 14px rgba(0, 0, 0, 0.12), 0px 5px 5px rgba(0, 0, 0, 0.2);
     border-radius: 12px;
-    z-index: 1000;
+    z-index: 1;
     position: relative;
     transition: transform 0.3s ease-in-out;
 }
@@ -250,7 +250,7 @@ input[type="range"]::-webkit-slider-thumb {
     transform: translateX(-214px);
   }
 .container-close{
-    height: 124px;
+    height: 161px;
     position: absolute;
     right: 0;
     margin-right: -10px;
@@ -259,8 +259,6 @@ input[type="range"]::-webkit-slider-thumb {
 /*Estilos Tabla de las Apis*/
 .tooltip-table {
     position: absolute;
-    margin-top: -80px;
-    margin-left: -80px;
     width: 205px;
     height: 44px;
     display: flex;
@@ -368,6 +366,14 @@ input[type="range"]::-webkit-slider-thumb {
     display: flex;
     justify-content: center;
     padding: 8px 16px;
+}
+
+/*Estilos tablas de Datastores*/
+.container-datastores-table{
+    width: 795px;
+    box-shadow: 0px -2px 18px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 21px;
+    position: relative;
 }
 @media only screen and (max-width:800px){
     .date-app{
